...
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintRight_toLeftOf="@id/divider"
            android:layout_marginTop="12dp"
            android:text="Username:" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="Username1234"
            android:text="@{user.displayName}"
            app:layout_constraintLeft_toRightOf="@id/divider"
...
